Fix header width, wrap list in container

--- a/src/styles/List.css
+++ b/src/styles/List.css
@@ -1,3 +1,7 @@
+.list-view-container {
+  width: 100%;
+}
+
 .list-container {
   width: 100%;
   display: flex;
@@ -5,6 +9,14 @@
   justify-content: center;
   align-items: center;
 }
+
+/* .flex-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem 0;
+  width: 385px;
+} */
 
 .soon {
   border-left: 5px solid red;
@@ -50,7 +62,7 @@ section .add-item-link {
   width: 35%;
   display: flex;
   flex-direction: row;
-  justify-content: space-evenly;
+  justify-content: center;
   font-size: 1.4rem;
   text-decoration: none;
   color: black;
@@ -59,6 +71,11 @@ section .add-item-link {
 
 .add-item-link:hover {
   border-bottom: 3px solid #5bbdc8;
+}
+
+.add-item-link i,
+.add-item-link p {
+  margin: 0 1rem;
 }
 
 .top-container label {
@@ -72,7 +89,4 @@ section .add-item-link {
 .flex-container {
   display: flex;
   justify-content: space-between;
-  align-items: center;
-  padding: 1rem 0;
-  width: 385px;
 }
